add remove button

--- a/resume.html
+++ b/resume.html
@@ -65,14 +65,21 @@
         <section id="template-project-experience">
           <h2>Project Experience</h2>
           <div class="project-template">
+            <button class="add-project">+</button>
             <h3 contenteditable="true">[Project Name]</h3>
+            <button class="remove-project">-</button>
             <p>
               <strong>Role:</strong>
               <span contenteditable="true">[Your Role]</span>
             </p>
             <ul>
-              <li contenteditable="true">[Project Detail or Achievement 1]</li>
-              <li contenteditable="true">[Project Detail or Achievement 2]</li>
+              <li>
+                <button class="add-project">+</button>
+                <span contenteditable="true"
+                  >[Project Detail or Achievement 1]</span
+                >
+                <button class="remove-project">-</button>
+              </li>
               <!-- Add more placeholders as needed -->
             </ul>
           </div>
@@ -83,7 +90,9 @@
           <h2>Education</h2>
           <div class="education-template">
             <h3 contenteditable="true">
+              <button class="add-education">+</button>
               [Degree], [Field of Study] at [University Name]
+              <button class="remove-education">-</button>
             </h3>
             <p>
               <strong>Location:</strong>
