--- a/resume.html
+++ b/resume.html
@@ -65,9 +65,11 @@
         <section id="template-project-experience">
           <h2>Project Experience</h2>
           <div class="project-template">
-            <button class="add-project">+</button>
-            <h3 contenteditable="true">[Project Name]</h3>
-            <button class="remove-project">-</button>
+            <h3 contenteditable="true">
+              <button class="add-project">+</button>
+              [Project Name]
+              <button class="remove-project">-</button>
+            </h3>
             <p>
               <strong>Role:</strong>
               <span contenteditable="true">[Your Role]</span>
