--- a/resume.html
+++ b/resume.html
@@ -21,8 +21,11 @@
         <section id="template-highlights">
           <h2>Highlights</h2>
           <ul>
-            <li contenteditable="true">[Highlight 1]</li>
-            <li contenteditable="true">[Highlight 2]</li>
+            <li>
+              <button class="add-highlight">+</button>
+              <span contenteditable="true">[Highlight 1]</span>
+              <button class="remove-highlight">-</button>
+            </li>
             <!-- Add more placeholders as needed -->
           </ul>
         </section>
