rename the class

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <!-- Left Side: Editable Resume Template -->
-      <div class="resume-template">
+      <div class="editable-resume">
         <section id="template-personal-info">
           <span contenteditable="true">Name: [Your Name]</span> |
           <span contenteditable="true">Phone: [Your Phone]</span> |
@@ -114,7 +114,7 @@
       </div>
 
       <!-- Right Side: Highlighted Resume -->
-      <div class="highlighted-resume">
+      <div class="tailored-resume">
         <div id="resume">
           <section id="personal-info">
             <span id="name"></span> |
