--- a/popup.html
+++ b/popup.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <button id="reviseResumeBtn">Revise Resume</button>
-
-    <!-- Modal -->
-    <div id="resumeModal" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <iframe id="resumeFrame" src="resume.html"></iframe>
+    <div class="popup-container">
+      <h2>Resume Extension</h2>
+      <button id="reviseResumeBtn">Revise Resume</button>
+      <div class="upload-section">
+        <label for="resumeUpload">Upload your resume:</label>
+        <input type="file" id="resumeUpload" accept=".pdf, .doc, .docx" />
+        <button id="uploadButton">Upload</button>
       </div>
     </div>
 
