--- a/popup.html
+++ b/popup.html
@@ -18,8 +18,9 @@
         <button id="uploadButton" class="action-button">Upload</button>
       </div>
     </div>
-    <script src="pdf.js"></script>
-    <script src="pdf.worker.js"></script>
-    <script src="popup.js"></script>
+    <script type="module" src="populateEditableResume.js"></script>
+    <script type="module" src="pdf.js"></script>
+    <script type="module" src="pdf.worker.js"></script>
+    <script type="module" src="popup.js"></script>
   </body>
 </html>
