--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
+    <div class="loader" id="loader" style="display: none"></div>
     <div class="popup-container">
       <h2 class="popup-title">Smart Resume</h2>
       <button id="reviseResumeBtn" class="action-button">Revise Resume</button>
