--- a/resume.html
+++ b/resume.html
@@ -150,6 +150,7 @@
     </div>
 
     <button onclick="downloadPDF()">Download as PDF</button>
+    <script src="populateAndDisplayModal.js"></script>
     <script src="highlight.js"></script>
     <script src="html2pdf.min.js"></script>
     <script src="script.js"></script>
